<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Results.PickServicesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backIB"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/v_button_transparent"
            android:padding="10dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/serviceNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:hint="@string/service_name"
        android:padding="15dp"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/navCL" />

    <EditText
        android:id="@+id/serviceDescriptionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="start"
        android:hint="@string/service_description"
        android:lines="5"
        android:padding="15dp"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/serviceNameET" />

    <TextView
        android:id="@+id/serviceDurationTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/service_duration"
        android:padding="15dp"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/serviceDescriptionET" />

    <EditText
        android:id="@+id/serviceCostET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:hint="@string/service_cost"
        android:padding="15dp"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/serviceDurationTV" />

    <Button
        android:id="@+id/addServiceB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/v_button"
        android:padding="15dp"
        android:text="@string/service_add"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serviceCostET" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/servicesCG"
        style="@style/Widget.MaterialComponents.ChipGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addServiceB" />

    <Button
        android:id="@+id/doneB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/v_button_full"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>