<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Results.PickLocationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backIB"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/v_button_transparent"
            android:padding="10dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/fakeFocusET"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_title"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/navCL"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/openMapB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/v_button"
        android:padding="15dp"
        android:text="@string/use_map"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchET" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shadowCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shadowDark"
        android:elevation="10dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/searchET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/v_white_rounded"
        android:hint="@string/location_placeholder"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintTop_toBottomOf="@id/title1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeSuggestionsCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/v_white_rounded"
        android:elevation="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/searchET"
        app:layout_constraintStart_toStartOf="@id/searchET"
        app:layout_constraintTop_toBottomOf="@id/searchET">

        <ListView
            android:id="@+id/placeSuggestionsLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/openMapB"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:text="@string/travel_preferences_title"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <CheckBox
        android:id="@+id/servicesAtLocCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title2"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/services_at_location"
        android:textSize="16sp"/>

    <CheckBox
        android:id="@+id/travelForServicesCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/servicesAtLocCB"
        app:layout_constraintStart_toStartOf="@id/servicesAtLocCB"
        android:layout_marginTop="25dp"
        android:text="@string/travel_for_service"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/editMaxDistanceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/accentGradient"
        app:layout_constraintTop_toBottomOf="@id/travelForServicesCB"
        app:layout_constraintStart_toStartOf="@id/travelForServicesCB"
        app:layout_constraintEnd_toEndOf="@id/travelForServicesCB"
        android:layout_marginTop="5dp"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/doneB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/v_button_full"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>