<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Results.PickDurationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backIB"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/v_button_transparent"
            android:padding="10dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/hoursTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/minutesTV"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/navCL"/>

    <TextView
        android:id="@+id/minutesTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/hoursTV"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/navCL"/>

    <ListView
        android:id="@+id/hoursLV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/hoursTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/doneB"
        app:layout_constraintEnd_toStartOf="@id/minutesLV"/>

    <ListView
        android:id="@+id/minutesLV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/minutesTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/doneB"
        app:layout_constraintStart_toEndOf="@id/hoursTV"/>

    <Button
        android:id="@+id/doneB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/v_button_full"
        android:textColor="@color/white"
        android:text="@string/done"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>